ulthuan/apps/mealie/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cooking
  labels:
    app: mealie
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mealie
  template:
    metadata:
      name: mealie
      labels:
        app: mealie
    spec:
      volumes:
        - name: recipe-book
          persistentVolumeClaim:
            claimName: recipe-book-pvc
      containers:
        - name: mealie
          image: ghcr.io/mealie-recipes/mealie:v3.28.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9000
          volumeMounts:
            - name: recipe-book
              mountPath: /app/data
      restartPolicy: Always
