ulthuan/apps/mealie/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mealie
spec:
  type: ClusterIP
  ports:
    - port: 9000
  selector:
    app: mealie
